--- a/index.html
+++ b/index.html
@@ -25,24 +25,12 @@
         </div>
     </header>
 
-    <!-- Main Content Section -->
+    <!-- Available Plugins Section (this will be at the top now) -->
     <main>
-        <!-- Available Plugins Section -->
         <section class="plugin-list" id="plugins">
             <h2>Featured Plugins</h2>
             <div class="plugin-cards">
                 <!-- Plugin cards will be dynamically injected here -->
-            </div>
-        </section>
-
-        <!-- Download Plugin Section -->
-        <section class="download-section">
-            <h2>Download Plugin</h2>
-            <div>
-                <select id="plugin-dropdown">
-                    <!-- Dropdown options will be dynamically injected here -->
-                </select>
-                <button class="btn-download" onclick="downloadPlugin()">Download</button>
             </div>
         </section>
     </main>
