--- a/index.html
+++ b/index.html
@@ -20,24 +20,23 @@
     <header class="hero">
         <div class="hero-content">
             <h1>Plugin Manager</h1>
-            <p>Your one-stop solution for managing and downloading Minecraft plugins.</p>
-            <a href="#plugins" class="btn-hero">Browse Plugins</a>
+            <p>Browse and Download Minecraft Plugins</p>
         </div>
     </header>
 
-    <!-- Available Plugins Section (this will be at the top now) -->
+    <!-- Plugin List Section (Full Page) -->
     <main>
         <section class="plugin-list" id="plugins">
-            <h2>Featured Plugins</h2>
+            <h2>Download Plugins</h2>
             <div class="plugin-cards">
                 <!-- Plugin cards will be dynamically injected here -->
             </div>
         </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer (optional, could be minimal) -->
     <footer>
-        <p>&copy; 2024 Plugin Manager. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
+        <p>&copy; 2024 Plugin Manager. All rights reserved.</p>
     </footer>
 
     <script src="assets/js/script.js"></script>
